--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,4 +45,7 @@ find_package(SDL2 REQUIRED SDL2)
 include_directories(${SDL2_INCLUDE_DIRS})
 target_link_libraries(${ENGINE_PROJECT_NAME} SDL2::SDL2)
 
-
+# SDL2 image #
+find_package(SDL2_image REQUIRED)
+include_directories(${SDL2_IMAGE_INCLUDE_DIRS})
+target_link_libraries(${ENGINE_PROJECT_NAME} SDL2_image::SDL2_image)
