--- a/libs/Icosahedron/CMakeLists.txt
+++ b/libs/Icosahedron/CMakeLists.txt
@@ -34,6 +34,7 @@ set(LIBRARY_HEADERS
     
     ${LIBRARY_HEADERS_DIRECTORY}/scene/2d/Shape2D.h
     ${LIBRARY_HEADERS_DIRECTORY}/scene/2d/RectangleShape.h
+    ${LIBRARY_HEADERS_DIRECTORY}/scene/2d/PolygonShape.h
     ${LIBRARY_HEADERS_DIRECTORY}/scene/2d/Camera2D.h
 
     ${LIBRARY_HEADERS_DIRECTORY}/Application.h
@@ -51,6 +52,7 @@ set(LIBRARY_SOURCE
     ${LIBRARY_SOURCE_DIRECTORY}/Renderer.cpp
 
     ${LIBRARY_SOURCE_DIRECTORY}/scene/2d/RectangleShape.cpp
+    ${LIBRARY_SOURCE_DIRECTORY}/scene/2d/PolygonShape.cpp
     ${LIBRARY_SOURCE_DIRECTORY}/scene/2d/Camera2D.cpp
 
     ${LIBRARY_SOURCE_DIRECTORY}/input/KeyboardController.cpp
