When putting the examples into separate files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ set(ENGINE_LIBRARIES
 
 set(ENGINE_THIRD_PARTY_DIRECTORY third-party)
 
+set(ENGINE_EXAMPLES_DIRECTORY examples)
+
 # Project
 project(${ENGINE_FULL_PROJECT_NAME})
 project(icosahedron)
@@ -40,37 +42,16 @@ include(${SDL2_DIR}/sdl2-config.cmake)
 include(${SDL2_IMAGE_DIR}/sdl2-image-config.cmake)
 include(${FREETYPE2_DIR}/freetype2-config.cmake)
 
-add_executable(${ENGINE_PROJECT_NAME} ${ENGINE_SOURCE})
 
-set(CPACK_PROJECT_NAME ${PROJECT_NAME})
-set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
-include(CPack)
+
+##### Main file #####
+add_executable(${ENGINE_PROJECT_NAME} ${ENGINE_SOURCE})
 
 # Third-party libraries #
 find_package(OpenGL REQUIRED COMPONENTS OpenGL)
 
-# SDL2 main #
-#find_package(SDL2 REQUIRED SDL2main)
-#include_directories(${SDL2_INCLUDE_DIRS})
-
-# SDL2 #
-#find_package(SDL2 REQUIRED)
-#include_directories(${SDL2_INCLUDE_DIRS})
-
-# SDL2 image #
-#find_package(SDL2_image REQUIRED SDL_image)
-#include_directories(${SDL2_IMAGE_INCLUDE_DIRS})
-
-# SDL2 mixer #
-#find_package(SDL2_mixer REQUIRED SDL2_mixer)
-#include_directories(${SDL2_MIXER_INCLUDE_DIRS})
-
 # Test #
 target_link_libraries(${ENGINE_PROJECT_NAME} testing)
-
-# Freetype2 #
-#find_package(Freetype REQUIRED Freetype)
-#include_directories(${FREETYPE2_INCLUDE_DIRS})
 
 find_package(OpenGL)
 
@@ -105,4 +86,62 @@ target_include_directories(${ENGINE_PROJECT_NAME} PRIVATE ${FREETYPE2_INCLUDES})
 foreach(LIBRARY ${ENGINE_LIBRARIES})
     add_subdirectory("${ENGINE_LIBRARIES_DIRECTORY}/${LIBRARY}")
 endforeach(LIBRARY)
+
+
 target_link_libraries(${ENGINE_PROJECT_NAME} ${ENGINE_LIBRARIES})
+
+
+##### Examples #####
+add_executable(icosahedron-examples examples/main.cpp)
+
+
+# Third-party libraries #
+find_package(OpenGL REQUIRED COMPONENTS OpenGL)
+
+# Test #
+target_link_libraries(icosahedron-examples testing)
+
+find_package(OpenGL)
+
+
+if (NOT WIN32)
+    string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
+    string(STRIP ${SDL2_IMAGE_LIBRARIES} SDL2_IMAGE_LIBRARIES)
+    
+    string(STRIP ${FREETYPE2_LIBRARIES} FREETYPE2_LIBRARIES)
+endif (NOT WIN32)
+
+
+set(SDL2_LIBRARIES ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
+set(FREETYPE2_LIBRARIES ${FREETYPE2_LIBRARIES})
+
+set(SDL2_INCLUDES ${SDL2_DIR}/include ${SDL2_IMAGE_DIR}/include)
+set(FREETYPE2_INCLUDES ${FREETYPE2_DIR}/include)
+
+
+link_directories(${SDL2_LIBRARIES}
+    ${FREETYPE2_LIBRARIES}
+)
+
+include_directories(${CMAKE_CURRENT_BINARY_DIR} ${SDL2_INCLUDES}
+    ${FREETYPE2_INCLUDES}
+)
+
+target_link_libraries(icosahedron-examples freetype)
+target_include_directories(icosahedron-examples PRIVATE ${FREETYPE2_INCLUDES})
+
+# Icosahedron library
+foreach(LIBRARY ${ENGINE_LIBRARIES})
+    #add_subdirectory("${ENGINE_LIBRARIES_DIRECTORY}/${LIBRARY}")
+endforeach(LIBRARY)
+
+
+
+target_include_directories(icosahedron-examples PRIVATE examples/include)
+target_link_libraries(icosahedron-examples ${ENGINE_LIBRARIES})
+
+
+
+set(CPACK_PROJECT_NAME ${PROJECT_NAME})
+set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
+include(CPack)
