--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -196,7 +196,7 @@ target_link_libraries(icosahedron-main PUBLIC Icosahedron Physics testing)
 
 
 ##### Examples #####
-add_executable(icosahedron-examples "examples/WindowExample.cpp")
+add_executable(icosahedron-examples "examples/3D/SceneWithShadows.cpp")
 find_package(OpenGL REQUIRED COMPONENTS OpenGL)
 find_package(OpenGL)
 
