Add physics example

--- a/libs/Physics/CMakeLists.txt
+++ b/libs/Physics/CMakeLists.txt
@@ -13,9 +13,33 @@ project(${PROJECT_NAME})
 add_library(${LIBRARY_NAME} STATIC
     # Headers
     ${LIBRARY_HEADERS_DIRECTORY}/2d/Transform2D.h
+    ${LIBRARY_HEADERS_DIRECTORY}/2d/ManifoldPoints2D.h
+
+    ${LIBRARY_HEADERS_DIRECTORY}/2d/Collider2D.h
+    ${LIBRARY_HEADERS_DIRECTORY}/2d/CollisionUtils2D.h
     
+    ${LIBRARY_HEADERS_DIRECTORY}/2d/objects/Object2D.h
+    ${LIBRARY_HEADERS_DIRECTORY}/2d/objects/RigidObject2D.h
+
+
+    ${LIBRARY_HEADERS_DIRECTORY}/2d/Manifold2D.h
+    ${LIBRARY_HEADERS_DIRECTORY}/2d/Solver2D.h
+
+    ${LIBRARY_HEADERS_DIRECTORY}/2d/levels/ObjectLevel2D.h
+    ${LIBRARY_HEADERS_DIRECTORY}/2d/levels/PhysicsLevel2D.h
+
     # Sources
     ${LIBRARY_SOURCE_DIRECTORY}/2d/Transform2D.cpp
+
+    ${LIBRARY_SOURCE_DIRECTORY}/2d/Collider2D.cpp
+    ${LIBRARY_SOURCE_DIRECTORY}/2d/CollisionUtils2D.cpp
+
+    ${LIBRARY_SOURCE_DIRECTORY}/2d/objects/Object2D.cpp
+    ${LIBRARY_SOURCE_DIRECTORY}/2d/objects/RigidObject2D.cpp
+
+    ${LIBRARY_SOURCE_DIRECTORY}/2d/Solver2D.cpp
+
+    ${LIBRARY_SOURCE_DIRECTORY}/2d/levels/ObjectLevel2D.cpp
 )
 
 target_include_directories(${LIBRARY_NAME} PRIVATE
