--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -196,7 +196,7 @@ target_link_libraries(icosahedron-main PUBLIC Icosahedron Physics testing)
 
 
 ##### Examples #####
-add_executable(icosahedron-examples "examples/physics/BasicPhysics.cpp")
+add_executable(icosahedron-examples "examples/physics/Debug.cpp")
 #add_executable(icosahedron-examples "examples/demos/RaytracingDemo.cpp")
 
 find_package(OpenGL REQUIRED COMPONENTS OpenGL)
